# traverse subdirectories
set(TTK_BASECODES "")

set(BASECODE_DIRS "")
list(APPEND BASECODE_DIRS "common")
list(APPEND BASECODE_DIRS "kdTree")
list(APPEND BASECODE_DIRS "triangulation")
list(APPEND BASECODE_DIRS "identifiers")
list(APPEND BASECODE_DIRS "skeleton")
list(APPEND BASECODE_DIRS "geometry")
list(APPEND BASECODE_DIRS "icosphere")
list(APPEND BASECODE_DIRS "ftmTree")
list(APPEND BASECODE_DIRS "ftmTreePP")
list(APPEND BASECODE_DIRS "scalarFieldSmoother")
list(APPEND BASECODE_DIRS "connectedComponents")
list(APPEND BASECODE_DIRS "localizedTopologicalSimplification")
list(APPEND BASECODE_DIRS "abstractTriangulation")
list(APPEND BASECODE_DIRS "compactTriangulation")
list(APPEND BASECODE_DIRS "implicitTriangulation")
list(APPEND BASECODE_DIRS "periodicImplicitTriangulation")
list(APPEND BASECODE_DIRS "explicitTriangulation")
list(APPEND BASECODE_DIRS "mergeTreeClustering")
list(APPEND BASECODE_DIRS "assignmentSolver")
list(APPEND BASECODE_DIRS "persistenceDiagram")
list(APPEND BASECODE_DIRS "persistentSimplexPairs")
list(APPEND BASECODE_DIRS "dynamicTree")
list(APPEND BASECODE_DIRS "progressiveTopology")
list(APPEND BASECODE_DIRS "multiresTopology")
list(APPEND BASECODE_DIRS "multiresTriangulation")
list(APPEND BASECODE_DIRS "approximateTopology")
list(APPEND BASECODE_DIRS "planarGraphLayout")
list(APPEND BASECODE_DIRS "discreteMorseSandwich")
list(APPEND BASECODE_DIRS "discreteGradient")

foreach(BASECODE ${BASECODE_DIRS})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${BASECODE})
    list(APPEND TTK_BASECODES "${BASECODE}")
endforeach()

set(TTK_BASECODES ${TTK_BASECODES} CACHE INTERNAL "")
